--- a/WhatWearToday/Base.lproj/Main.storyboard
+++ b/WhatWearToday/Base.lproj/Main.storyboard
@@ -125,7 +125,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
-                                            <segue destination="6qm-pE-ZrR" kind="show" identifier="goToTypeOutfit" id="2uc-Ps-wCE"/>
+                                            <segue destination="wR5-Vw-j9S" kind="custom" identifier="goToTypeOutfitSegue" customClass="FromRightToLeftUIStoryboardSegue" customModule="WhatWearToday" customModuleProvider="target" id="SQY-nf-7rf"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="4S8-HX-CtE">
@@ -305,7 +305,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="F9K-Zw-61Q" kind="show" identifier="backToAddOutfitSegue" id="fyF-JP-eZw"/>
+                                    <segue destination="j4K-sv-ukx" kind="custom" identifier="backToAddOutfitSegue" customClass="FromLeftToRightUIStoryboardSegue" customModule="WhatWearToday" customModuleProvider="target" id="Jjo-jZ-HjR"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -379,6 +379,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="fyF-JP-eZw"/>
+        <segue reference="Jjo-jZ-HjR"/>
+        <segue reference="SQY-nf-7rf"/>
     </inferredMetricsTieBreakers>
 </document>
