--- a/WhatWearToday/Base.lproj/Main.storyboard
+++ b/WhatWearToday/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--What wear today (change dinamically) ?-->
+        <!--What wear ... ?-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="WhatWearToday" customModuleProvider="target" sceneMemberID="viewController">
@@ -23,20 +23,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="blt-0c-IBT">
-                                <rect key="frame" x="0.0" y="120" width="375" height="196"/>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="blt-0c-IBT">
+                                <rect key="frame" x="0.0" y="90" width="375" height="196"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="494203175.80146301">
                                     <!--2016-08-29 22:39:35 +0000-->
                                 </date>
-                                <date key="minimumDate" timeIntervalSinceReferenceDate="495630000">
-                                    <!--2016-09-15 11:00:00 +0000-->
-                                </date>
+                                <connections>
+                                    <action selector="datePickerAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="9PU-x2-180"/>
+                                </connections>
                             </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="13˚" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uBk-Ot-Gfc">
+                                <rect key="frame" x="146" y="440" width="92" height="56"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="60"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Cloudy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zgs-jF-7mB">
+                                <rect key="frame" x="70" y="504" width="244" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="London, Holloway" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVy-zh-RGG">
+                                <rect key="frame" x="70" y="526" width="244" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OwW-fM-4lP">
+                                <rect key="frame" x="99" y="598" width="187" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.029831843470000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="28"/>
+                                <state key="normal" title="Calculate"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="summer-rain.png" translatesAutoresizingMaskIntoConstraints="NO" id="IIs-sQ-11z">
+                                <rect key="frame" x="57" y="294" width="261" height="138"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" title="What wear today (change dinamically) ?" id="hoZ-Kq-Bf5">
+                    <navigationItem key="navigationItem" title="What wear ... ?" id="hoZ-Kq-Bf5">
                         <barButtonItem key="leftBarButtonItem" systemItem="bookmarks" id="gt3-nq-49n">
                             <connections>
                                 <segue destination="mhP-Xu-yay" kind="show" id="8c3-SO-WiV"/>
@@ -48,6 +85,14 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="calculation" destination="OwW-fM-4lP" id="hql-Cr-xbe"/>
+                        <outlet property="datePicker" destination="blt-0c-IBT" id="F9R-Y6-0u7"/>
+                        <outlet property="degrees" destination="uBk-Ot-Gfc" id="FGb-C2-Tce"/>
+                        <outlet property="location" destination="gVy-zh-RGG" id="X3B-wX-jh8"/>
+                        <outlet property="weatherLabel" destination="Zgs-jF-7mB" id="zrb-n9-9zc"/>
+                        <outlet property="weatherPhoto" destination="IIs-sQ-11z" id="nfc-AD-PL1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -496,12 +541,13 @@
         </scene>
     </scenes>
     <resources>
+        <image name="summer-rain.png" width="256" height="256"/>
         <image name="trousers.jpg" width="273" height="364"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="lui-AW-Bdo"/>
-        <segue reference="o6D-34-Gva"/>
-        <segue reference="C5V-8Q-qqt"/>
+        <segue reference="8c3-SO-WiV"/>
+        <segue reference="D6g-sl-Qg2"/>
         <segue reference="yso-sa-3s6"/>
     </inferredMetricsTieBreakers>
 </document>
